--- a/2/index.html
+++ b/2/index.html
@@ -2,7 +2,7 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>2048</title>
+  <title>Vince 2</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -22,7 +22,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Vince</h1>
+      <h1 class="title">Vince2</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -30,8 +30,8 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Don't be a <a href="http://youtu.be/QCh837b9kPM">****</a>!
-	  <strong>Play with me!</strong></p>
+      <p class="game-intro">Don't be a <a href="http://youtu.be/9FPjxl0Lg5Q">****</a>!
+	  Play with me! <strong>Again!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
