--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="above-game">
       <p class="game-intro">Don't be a <a href="http://youtu.be/QCh837b9kPM">****</a>!
-	  <strong>Play with me!</strong></p>
+	  <strong>Play with me!</strong> (<a href="2">Part 2</a>)</p>
       <a class="restart-button">New Game</a>
     </div>
 
